<resources>
    <string name="app_name">TourApp</string>
    <string name="amusement_park">Amusement Park</string>
    <string name="gardens">Gardens</string>
    <string name="religious_sites">Religious Sites</string>
    <string name="lakes">Lakes</string>
    <string name="must_visit">Must Visit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
